--- a/ann/ann_config.ini
+++ b/ann/ann_config.ini
@@ -9,5 +9,5 @@ SQSRequestsQueueName = ishaz_job_requests
 SQSRequestsDLQQueueName = ishaz_job_requests_DLQ
 SQSResultsQueueName = ishaz_job_results
 SQSResultsDLQQueueName = ishaz_job_results_DLQ
-;AWS_SNS_JOB_COMPLETE_TOPIC = arn:aws:sns:us-east-1:659248683008:ishaz_job_results
+AWS_SNS_JOB_COMPLETE_TOPIC = arn:aws:sns:us-east-1:659248683008:ishaz_job_results
 ;SQSArchiveQueueUrl = https://sqs.us-east-1.amazonaws.com/659248683008/ishaz_archive
