--- a/util/archive/archive_config.ini
+++ b/util/archive/archive_config.ini
@@ -10,5 +10,10 @@
 # AWS general settings
 [aws]
 AwsRegionName = us-east-1
+Owner = ishaz
+ResultsBucket = mpcs-cc-gas-results
+VaultName = mpcs-cc
+DynamoDBTable = ishaz_annotations
+SQSArchiveQueueName = ishaz_glacier_archive
 
 ### EOF
