--- a/util/util_config.ini
+++ b/util/util_config.ini
@@ -9,11 +9,13 @@
 
 # GAS parameters
 [gas]
-AccountsDatabase = <CNetID>_accounts
-EmailDefaultSender = <CNetID>@mpcs-cc.com
+EmailDefaltSender = ishaz@uchicago.edu
+AccountDatabase = ishaz_accounts
 
 # AWS general settings
 [aws]
 AwsRegionName = us-east-1
-
+SQSRequestsQueueName = ishaz_job_requests
+SNSResultTopic= arn:aws:sns:us-east-1:659248683008:ishaz_job_results
+SNSArchiveTopic = arn:aws:sns:us-east-1:659248683008:ishaz_glacier_archive
 ### EOF
