updated for part 9

--- a/util/restore/restore_config.ini
+++ b/util/restore/restore_config.ini
@@ -10,5 +10,10 @@
 # AWS general settings
 [aws]
 AwsRegionName = us-east-1
+ResultsBucket = mpcs-cc-gas-results
+VaultName = mpcs-cc
+DynamoDBTable = ishaz_annotations
+SQSRestoreQueueName = ishaz_glacier_restore
+SNSThawTopic = arn:aws:sns:us-east-1:659248683008:ishaz_glacier_thaw
 
 ### EOF
