--- a/util/thaw/thaw_config.ini
+++ b/util/thaw/thaw_config.ini
@@ -10,5 +10,9 @@
 # AWS general settings
 [aws]
 AwsRegionName = us-east-1
+ResultsBucket = mpcs-cc-gas-results
+VaultName = mpcs-cc
+DynamoDBTable = ishaz_annotations
+SQSThawQueueName = ishaz_glacier_thaw
 
 ### EOF
