finished required parts, working on bug#1 localtime bug#2 autoscaling healthcheck issue bug#3 email notification

--- a/util/util_config.ini
+++ b/util/util_config.ini
@@ -10,7 +10,7 @@
 # GAS parameters
 [gas]
 EmailDefaltSender = ishaz@uchicago.edu
-AccountDatabase = ishaz_accounts
+AccountsDatabase = ishaz_accounts
 
 # AWS general settings
 [aws]
